# mpc_controller

./: .gitignore  CMakeLists.txt  README.md  berlin_pts.txt  in_contour_berlin.txt  out_contour_berlin.txt  trained_nn_logs.txt
dataset/: README.md  dataset_00.txt  dataset_03_spiral.txt
src/: distance_transform.cpp  lib_io.cpp  lib_mpc.cpp  lib_nn.cpp  lib_trajectory.cpp  main.cpp
src/lib/io/: lib_io.h
src/lib/mpc/: lib_mpc.h
src/lib/nn/: lib_nn.h
src/lib/traj/: lib_trajectory.h
src_python/: draw_network.py  find_coordinates.py  lib_draw_network.py
trained_nn/: race_car_1712_v4_nn  training_final_cost_40inp_3hiddlay_30neurons_dataset2_activationf2
